--- a/src/app/featured/dashbord/component/details-popups/user-details/user-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/user-details/user-details.component.html
@@ -71,27 +71,17 @@
                 </div>
               </div>
             </div>
-            <div class="table-head">Company Access</div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let item of companyList">
-                  <td>
-                    <div class="checkbox">
-                      <label>
-                        <input type="checkbox" disabled [value]="item.CompanyID" [checked]="item.checked"
-                          (change)="selectCompany(item)">
-                        <span></span>
-                        {{item.CompanyName}}
-                      </label>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="form-group-wrap row">
+              <div class="col col-sm-4 label astrick">
+                Company Access
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="companyid" disabled>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <!-- Modal footer -->
