--- a/src/app/shared/components/edit-popup/edit-popup.component.html
+++ b/src/app/shared/components/edit-popup/edit-popup.component.html
@@ -25,16 +25,8 @@
                           'has-error': isSubmitted && formControls[item.key].errors
                         }" />
 
-          <!-- <select class="form-control" [id]="item.key" *ngSwitchCase="'dropdown'" [formControlName]="item.key"
-            [ngClass]="{
-              'has-error': isSubmitted && formControls[item.key].errors
-            }">
-            <option *ngFor="let opt of item.options" [value]="opt[item.returnKey]">{{
-              opt[item.displayKey]
-            }}</option>
-          </select> -->
-          <ng-select *ngSwitchCase="'dropdown'" [items]="item.options" bindLabel="{{item.displayKey}}"
-            bindValue="{{item.returnKey}}" appendTo="body" [ngClass]="{
+          <ng-select *ngSwitchCase="'dropdown'" [multiple]="item.multi" [items]="item.options"
+            bindLabel="{{item.displayKey}}" bindValue="{{item.returnKey}}" appendTo="body" [ngClass]="{
                         'has-error': isSubmitted && formControls[item.key].errors
                       }" [formControlName]="item.key">
           </ng-select>
