--- a/src/app/featured/dashbord/component/contact-us/contact-us.component.html
+++ b/src/app/featured/dashbord/component/contact-us/contact-us.component.html
@@ -1,7 +1,7 @@
 <section class="content-wrap">
   <section class="table-heading">
     <div class="flex-wrap">
-      <h1>Contact Us</h1>
+      <h1>Enquires</h1>
     </div>
     <app-search-box></app-search-box>
   </section>
