--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -23,8 +23,8 @@
           <tr *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction};index as i">
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.UserID}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_name}}</td>
-            <td style="width: 20%;">{{item.CompanyID}}</td>
-            <td style="width: 20%;">{{item.CompanyName}}</td>
+            <td style="width: 20%;">{{item?.CompanyID?.join(',')}}</td>
+            <td style="width: 20%;">{{item?.CompanyName?.join(',')}}</td>
             <td style="width: 10%;">
               <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
