--- a/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
+++ b/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
@@ -80,6 +80,16 @@
                 </div>
               </div>
             </div>
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label ">
+                Company
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="companyid" disabled>
+                </div>
+              </div>
+            </div>
 
             <div class="form-group-wrap chain-logo row">
               <div class="col col-sm-5 label flex-top ">
