--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -57,8 +57,9 @@
   (formSubmitted)="cancelView($event)">
 
 </app-normal-user>
-<app-add-normal-user *ngIf="showEdit" [fields]="editFormData" (formCancel)="cancelEdit($event)"
-  (formSubmitted)="submitEdit($event)"></app-add-normal-user>
+<app-add-normal-user *ngIf="showEdit" [fields]="editFormData" [companyList]="allCompanies"
+  (formCancel)="cancelEdit($event)" (formSubmitted)="submitEdit($event)"></app-add-normal-user>
 
-<app-add-normal-user *ngIf="showAdd" [fields]="" (formCancel)="cancelAdd($event)" (formSubmitted)="submitAdd($event)">
+<app-add-normal-user *ngIf="showAdd" [fields]="" [companyList]="allCompanies" (formCancel)="cancelAdd($event)"
+  (formSubmitted)="submitAdd($event)">
 </app-add-normal-user>
