--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -29,7 +29,7 @@
           <tr *ngFor="let item of allUsers| orderBy: {property: column, direction: direction}">
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.id}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_name}}</td>
-            <td style="width: 10%;">{{item.companyid}}</td>
+            <td style="width: 10%;">{{item?.companyid?.join(',')}}</td>
             <td style="width: 20%;">{{item.email}}</td>
             <td style="width: 15%;"> {{item.password_ref}} </td>
             <td style="width: 15%;" [ngStyle]="{'color':item.status==1 ? 'green' : '#c0bbc7'}">
