--- a/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
+++ b/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
@@ -15,73 +15,106 @@
             </span>
           </div>
           <!-- Modal body -->
+
           <div class="modal-body">
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label">
-                User ID
+              <div class="col col-sm-5 label astrick">
+                First Name
               </div>
               <div class="col col-sm-5">
                 <div class="form-group">
-                  <input type="text" maxlength="6" class="form-control" formControlName="userid" disabled>
+                  <input type="text" class="form-control" formControlName="firstname" disabled>
+
                 </div>
               </div>
             </div>
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label">
+              <div class="col col-sm-5 label astrick">
+                Last Name
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="lastname" disabled>
+
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
+                DOB
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="dob" disabled>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
+                Gender
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="gender" disabled>
+
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
+                Mobile
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="user_phone" disabled>
+
+                </div>
+              </div>
+            </div>
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
+                Email
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="user_email" disabled>
+
+                </div>
+              </div>
+            </div>
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
+                User ID
+              </div>
+              <div class="col col-sm-5">
+                <div class="form-group">
+                  <input type="text" class="form-control" formControlName="user_id" disabled>
+
+                </div>
+              </div>
+            </div>
+            <div class="form-group-wrap row">
+              <div class="col col-sm-5 label astrick">
                 User Name
               </div>
               <div class="col col-sm-5">
                 <div class="form-group">
                   <input type="text" class="form-control" formControlName="username" disabled>
+
                 </div>
               </div>
               <div class="col col-sm-3">
               </div>
             </div>
-            <div class="form-group-wrap row">
-              <div class="col col-sm-5 label ">
-                Mobile
-              </div>
-              <div class="col col-sm-5">
-                <div class="form-group">
-                  <input type="text" numbersOnly maxlength="10" class="form-control" formControlName="mobile" disabled>
-                </div>
-              </div>
-            </div>
-            <div class="form-group-wrap row">
-              <div class="col col-sm-5 label">
-                Email
-              </div>
-              <div class="col col-sm-5">
-                <div class="form-group">
-                  <input type="text" class="form-control" formControlName="email" disabled>
-                </div>
-              </div>
 
-            </div>
-            <div class="form-group-wrap row">
-              <div class="col col-sm-5 label ">
-                UDID
-              </div>
-              <div class="col col-sm-5">
-                <div class="form-group">
-                  <input type="text" numbersOnly maxlength="6" class="form-control" formControlName="udid" disabled>
-                </div>
-              </div>
 
-            </div>
+
+
             <div class="form-group-wrap row">
-              <div class="col col-sm-5 label ">
-                Login Pin
-              </div>
-              <div class="col col-sm-5">
-                <div class="form-group">
-                  <input type="text" numbersOnly maxlength="6" class="form-control" formControlName="loginpin" disabled>
-                </div>
-              </div>
-            </div>
-            <div class="form-group-wrap row">
-              <div class="col col-sm-5 label ">
+              <div class="col col-sm-5 label astrick">
                 Company
               </div>
               <div class="col col-sm-5">
@@ -105,6 +138,7 @@
               </div>
             </div>
           </div>
+
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
