--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -12,11 +12,11 @@
       <thead>
         <tr>
           <th class="curser-point" (click)="sort('user_id')" style="width: 10%;">Id </th>
-          <th class="curser-point" (click)="sort('user_name')" style="width: 15%;">Name </th>
-          <th class="curser-point" (click)="sort('user_phone')" style="width: 20%;">Mobile </th>
+          <th class="curser-point" (click)="sort('firstname')" style="width: 15%;">First Name </th>
+          <th class="curser-point" (click)="sort('lastname')" style="width: 15%;">Last Name </th>
+          <th class="curser-point" (click)="sort('user_phone')" style="width: 10%;">Mobile </th>
           <th class="curser-point" (click)="sort('user_email')" style="width: 25%;">Email </th>
-          <!-- <th class="curser-point" (click)="sort('UDID')" style="width: 10%;">UUID </th> -->
-          <th class="curser-point" (click)="sort('LoginPin')" style="width: 10%;">Login Pin </th>
+          <th class="curser-point" (click)="sort('username')" style="width: 10%;">User Name</th>
           <th style="width: 10%;">Operation</th>
         </tr>
       </thead>
@@ -26,11 +26,11 @@
         <tbody>
           <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}">
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.user_id}}</td>
-            <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.user_name}}</td>
-            <td style="width: 20%;">{{item.user_phone}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.firstname}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.lastname}}</td>
+            <td style="width: 10%;">{{item.user_phone}}</td>
             <td style="width: 25%;">{{item.user_email}}</td>
-            <!-- <td style="width: 10%;">{{item.UDID}}</td> -->
-            <td style="width: 10%;">{{item.LoginPin}}</td>
+            <td style="width: 10%;">{{item.username}}</td>
             <td style="width: 10%;">
               <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
