--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -9,10 +9,10 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th class="curser-point" (click)="sort('UserID')" style="width: 20%;"> Id </th>
+          <th class="curser-point" (click)="sort('user_id')" style="width: 20%;"> Id </th>
           <th class="curser-point" (click)="sort('user_name')" style="width: 20%;"> Users </th>
-          <th class="curser-point" (click)="sort('CompanyID')" style="width: 20%;"> Company Id </th>
-          <th class="curser-point" (click)="sort('CompanyName')" style="width: 20%;"> Company Name </th>
+          <th class="curser-point" (click)="sort('companyID')" style="width: 20%;"> Company Id </th>
+          <th class="curser-point" (click)="sort('companyName')" style="width: 20%;"> Company Name </th>
           <th style="width: 10%;">Operation</th>
         </tr>
       </thead>
@@ -21,10 +21,10 @@
       <table class="table table-striped table-main-body" *ngIf="companyAccess&&companyAccess.length>0">
         <tbody>
           <tr *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction};index as i">
-            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.UserID}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_id}}</td>
             <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_name}}</td>
-            <td style="width: 20%;">{{item?.CompanyID?.join(',')}}</td>
-            <td style="width: 20%;">{{item?.CompanyName?.join(',')}}</td>
+            <td style="width: 20%;">{{item?.companyID?.join(',')}}</td>
+            <td style="width: 20%;">{{item?.companyName?.join(',')}}</td>
             <td style="width: 10%;">
               <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
