--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.scss
@@ -54,3 +54,8 @@ li{
     text-decoration: none;
     background-color: transparent;
 }
+.image-uploaded{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
