--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -101,7 +101,7 @@
                                 <label class="btn-upload">
                                     <input type="file" name="fileupload" (change)="fileProgress($event)"
                                         accept="image/*">
-                                    <img class="btn" [src]="imgUrl">
+                                    <img class="image-uploaded" [src]="imgUrl">
                                 </label>
                                 <p class="file-name" *ngIf="imageName">{{imageName}}</p>
                             </div>
