--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.scss
@@ -34,3 +34,8 @@
 .remove-borrom-padding{
     margin-bottom: 0px;
 }
+.image-uploaded{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
